# formalizing-reasoning

./: .gitignore  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
experiments/lean/: Hello.lean  scratchpad.lean
experiments/notebooks/: aime_2024.ipynb  aime_2024_eval.ipynb  aime_2024_prm_eval.ipynb  prover_v2.ipynb
formalizing_reasoning/: main.py  pyproject.toml
notebooks/: aime_2024.ipynb
results/: AIME_2024_Qwen2.5-Math-7B-Instruct_run_0.csv  AIME_2024_Qwen2.5-Math-7B-Instruct_run_2.csv  AIME_2024_Qwen2.5-Math-7B-Instruct_runs_8.csv  AIME_2024_Qwen3-8B_4_options_runs_1.csv  AIME_2024_Qwen3-8B_run_1.csv  AIME_2024_Qwen3-8B_run_2.csv  AIME_2024_Qwen3-8B_run_3.csv  AIME_2024_Qwen3-8B_run_4.csv  AIME_2024_Qwen3-8B_run_5.csv  AIME_2024_Qwen3-8B_run_6.csv  AIME_2024_Qwen3-8B_run_7.csv  AIME_2024_Qwen3-8B_run_8.csv  AIME_2024_Qwen3-8B_think_run_1.csv  AIME_2024_Qwen3-8B_think_run_2.csv  AIME_2024_Qwen3-8B_think_run_3.csv  AIME_2024_Qwen3-8B_think_run_4.csv  AIME_2024_Qwen3-8B_think_run_5.csv  AIME_2024_Qwen3-8B_think_run_6.csv  AIME_2024_Qwen3-8B_think_run_7.csv  AIME_2024_Qwen3-8B_think_run_8.csv  readme.md
src/benchmarks/aime/: AIME_2024_Qwen3-0.6B_4_options_runs_8.csv  aime.py  aime24.py  aime_acc.py  aime_mcq.py  readme.md
src/utils/: merge_csv.ipynb
