[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "formalizing_reasoning"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Ujan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["formalizing_reasoning"]
include = ["pyproject.toml", "formalizing_reasoning/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["formalizing_reasoning"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    "formalizing_reasoning",
]

